--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,55 +1,62 @@
 <div class="container">
-  <div class="mt-3">
-    <h1>Search for Recipe or News Article</h1>
+  <h1>Search for Recipe or News Article</h1>
 
-    <div class="input-group mb-4 mt-3">
-      <input [(ngModel)]="url" type="text" class="form-control" placeholder="Enter recipe or news article URL"
-        aria-label="Enter recipe or news article URL" aria-describedby="button-addon2">
-      <button (click)="fetchContent()" class="btn btn-outline-primary" type="button" id="button-addon2">Fetch
-        Content
-      </button>
-      <button (click)="clear()" class="btn btn-outline-danger" type="button" id="button-addon2">Clear</button>
-    </div>
+  <div class="search-bar">
+    <input type="text" [(ngModel)]="url" placeholder="Enter URL" />
+    <button (click)="fetchContent()">Fetch Content</button>
+    <button (click)="clear()">Clear</button>
+  </div>
 
-    <hr>
-    <div *ngIf="errorMessage" class="alert alert-danger">
-      {{ errorMessage }}
-    </div>
+  <div *ngIf="errorMessage" class="error">
+    {{ errorMessage }}
+  </div>
 
-    <div *ngIf="response && response.type === 'recipe'">
-      <h1>{{ response.data.recipeName }}</h1>
-      <img *ngIf="response.data.recipeImage && response.data.recipeImage !== 'N/A'" [src]="response.data.recipeImage"
-        alt="Recipe image" style="width: 440px;">
-      <h2>Description</h2>
-      <p>{{ response.data.description }}</p>
-      <h2>Ingredients</h2>
-      <ul>
-        <li *ngFor="let ingredient of response.data.ingredients">{{ ingredient }}</li>
-      </ul>
-      <h2>Instructions</h2>
-      <ol>
-        <li *ngFor="let instruction of response.data.instructions">
-          {{ instruction.text }}
-          <img *ngIf="instruction.image" [src]="instruction.image" alt="Instruction Image" style="width: 200px;">
-        </li>
-      </ol>
-    </div>
+  <div *ngIf="response && response.type === 'recipe'" class="recipe-content">
+    <h2>{{ response.data.recipeName }}</h2>
+    <img *ngIf="response.data.recipeImage" [src]="response.data.recipeImage" alt="Recipe image" class="recipe-image" />
+    <h3>Description</h3>
+    <p>{{ response.data.description }}</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li *ngFor="let ingredient of response.data.ingredients">{{ ingredient }}</li>
+    </ul>
+    <h3>Instructions</h3>
+    <ol>
+      <li *ngFor="let instruction of response.data.instructions">
+        {{ instruction.text }}
+        <img *ngIf="instruction.image" [src]="instruction.image" alt="Instruction image" class="instruction-image" />
+      </li>
+    </ol>
+  </div>
 
-    <div *ngIf="response && response.type === 'news'">
-      <h1>{{ response.data.title }}</h1>
-      <img *ngIf="response.data.image && response.data.image !== 'N/A'" [src]="response.data.image"
-        alt="News article image" style="width: 440px; margin-bottom: 1rem;">
-      <p><strong>Author:</strong> {{ response.data.author }}</p>
-      <p><strong>Published:</strong> {{ response.data.published.humanReadable !== 'N/A' ? response.data.published.humanReadable : 'Not available' }}
-        (Epoch: {{ response.data.published.epoch || 'Not available' }})</p>
-      <h2>Content</h2>
-      <ng-container *ngFor="let item of response.data.content">
-        <h2 *ngIf="item.type === 'heading'" class="news-heading mb-3">{{ item.text }}</h2>
-        <p *ngIf="item.type === 'paragraph'" class="news-content mb-3">{{ item.text }}</p>
-        <!-- Debug fallback for unexpected types -->
-        <p *ngIf="item.type !== 'heading' && item.type !== 'paragraph'" class="debug-content mb-3">
-          [Debug: Unknown type {{ item.type }}] {{ item.text }}
-        </p>
+  <div *ngIf="response && response.type === 'news'" class="news-content">
+    <h2>{{ response.data.title }}</h2>
+    <img *ngIf="response.data.image && response.data.image !== 'N/A'" [src]="response.data.image" alt="Article image" class="article-image" />
+    <p><strong>Author:</strong> {{ response.data.author }}</p>
+    <p>
+      <strong>Published:</strong>
+      {{ response.data.published.humanReadable !== 'N/A' ? response.data.published.humanReadable : 'Not available' }}
+      (Epoch: {{ response.data.published.epoch || 'Not available' }})
+    </p>
+    <h3>Content</h3>
+    <div *ngFor="let item of response.data.content">
+      <ng-container *ngIf="item.type === 'paragraph'">
+        <p>{{ item.text }}</p>
+      </ng-container>
+      <ng-container *ngIf="item.type === 'heading'">
+        <h2>{{ item.text }}</h2>
+      </ng-container>
+      <ng-container *ngIf="item.type === 'div'">
+        <div class="my-5">
+          <ng-container *ngFor="let subItem of item.content">
+            <ng-container *ngIf="subItem.type === 'text'">
+              {{ subItem.value }}
+            </ng-container>
+            <ng-container *ngIf="subItem.type === 'link'">
+              <a [href]="subItem.href" target="_blank" class="article-hover-class">{{ subItem.text }}</a>
+            </ng-container>
+          </ng-container>
+        </div>
       </ng-container>
     </div>
   </div>
